fix(styling): add border & box-shadow to Flatpickr in Dark Mode

--- a/packages/common/src/styles/flatpickr-dark.scss
+++ b/packages/common/src/styles/flatpickr-dark.scss
@@ -1,11 +1,11 @@
 /* Flatpickr Dark Theme - only an extract to darken the picker by using .slick-dark-mode */
 .flatpickr-calendar.slick-dark-mode {
   background-color: #212121;
-  box-shadow: none;
-  border: 0;
+  box-shadow: 0 1px 2px rgb(255 255 255 / 20%);
+  border: 1px solid #505050;
 
   &.arrowTop:before {
-    border-bottom-color: #20222c;
+    border-bottom-color: #505050;
   }
   &.arrowTop:after {
     border-bottom-color: #212121;
